--- a/Purchasing.Web/Views/Workgroup/CreateVendor.cshtml
+++ b/Purchasing.Web/Views/Workgroup/CreateVendor.cshtml
@@ -79,7 +79,7 @@
     <header class="ui-corner-top ui-widget-header">Type of Vendor to Add</header>
 
     <div class="section-text">
-        Please select the type of vendor you would like to add to the workgroup.
+        <p>Please select the type of vendor you would like to add to the workgroup.</p>
     </div>
 
     <ul>
