--- a/Purchasing.Web/Views/Workgroup/Delete.cshtml
+++ b/Purchasing.Web/Views/Workgroup/Delete.cshtml
@@ -1,11 +1,11 @@
 ﻿@model Purchasing.Core.Domain.Workgroup
 
 @{
-    ViewBag.Title = "Disable";
+    ViewBag.Title = "Disable Workgroup";
 }
 
 
-<h3>Are you sure you want to disable this?</h3>
+<h3>Are you sure you want to disable this workgroup?</h3>
 
 @using (Html.BeginForm()) {
 	@Html.AntiForgeryToken()
