--- a/Purchasing.Web/Views/Workgroup/EditAddress.cshtml
+++ b/Purchasing.Web/Views/Workgroup/EditAddress.cshtml
@@ -9,7 +9,7 @@
 @section SubNav
 {
 	<ul class="navigation">
-		<li>@Html.ActionLink("Back to List", "Addresses", new {id = @Model.Workgroup.Id})</li>
+		<li>@Html.ActionLink("Back to List", "Addresses", new { id = @Model.Workgroup.Id }, new { @class = "button" })</li>
 	</ul>
 }
 
