--- a/Purchasing.Web/Views/Workgroup/VendorList.cshtml
+++ b/Purchasing.Web/Views/Workgroup/VendorList.cshtml
@@ -54,8 +54,7 @@
 			<td>
                 @if (string.IsNullOrWhiteSpace(item.VendorId) && string.IsNullOrWhiteSpace(item.VendorAddressTypeCode))
                 {
-				<a href='@Url.Action("EditWorkgroupVendor", new { id = item.Workgroup.Id, workgroupVendorId = item.Id })'>
-					<img src='@Url.Image("edit.png")' />
+				<a href='@Url.Action("EditWorkgroupVendor", new { id = item.Workgroup.Id, workgroupVendorId = item.Id })' class="ui-icon ui-icon-pencil">
 				</a>                    
                 }
 			</td>
@@ -87,8 +86,7 @@
                 @(string.IsNullOrWhiteSpace(item.VendorId) && string.IsNullOrWhiteSpace(item.VendorAddressTypeCode) ? "No" : "Yes")
             </td>
 			<td>
-				<a href='@Url.Action("DeleteWorkgroupVendor", new { id = item.Workgroup.Id, workgroupVendorId = item.Id })'>
-					<img src='@Url.Image("delete.png")' />
+				<a href='@Url.Action("DeleteWorkgroupVendor", new { id = item.Workgroup.Id, workgroupVendorId = item.Id })' class="ui-icon ui-icon-trash">
 				</a>
 			</td>
 		
