--- a/Purchasing.Web/Css/Datatables.css
+++ b/Purchasing.Web/Css/Datatables.css
@@ -44,6 +44,7 @@ div.dataTables_wrapper
     padding: 0.75em 0px .75em; 
     border-top: 1px solid #eee;
     box-shadow: 0 5px 10px -5px #ddd inset; 
+    vertical-align: top;
 }
 .dataTables_length {border-top-left-radius: 4px; padding-left: 1%;}
 .dataTables_filter {border-top-right-radius: 4px; padding-right: 1%; float: right;}
