--- a/Purchasing.Web/Views/Workgroup/AccountDelete.cshtml
+++ b/Purchasing.Web/Views/Workgroup/AccountDelete.cshtml
@@ -9,8 +9,8 @@
 @section SubNav
 {
 	<ul class="navigation">
-			<li>@Html.ActionLink("Edit", "EditAccount", new { id = Model.Workgroup.Id, accountId = Model.Id}) </li>
-			<li>@Html.ActionLink("Back to List", "Accounts", new {id=Model.Workgroup.Id})</li>
+			<li>@Html.ActionLink("Edit", "EditAccount", new { id = Model.Workgroup.Id, accountId = Model.Id }, new { @class = "button" }) </li>
+			<li>@Html.ActionLink("Back to List", "Accounts", new { id = Model.Workgroup.Id }, new { @class = "button" })</li>
 		</ul>
 }
 
@@ -25,7 +25,7 @@
     <header class="ui-corner-top ui-widget-header">Account: @Model.Account.Name (@Model.Account.Id)</header>
     
     <ul>
-        <li><h3>Are you sure you want to delete this?</h3></li>
+        <li><h3>Are you sure you want to delete this account?</h3></li>
         <li>
             <div class="display-label">@Html.LabelFor(x => x.Approver)</div>
             <div class="display-details">@(Model.Approver != null ? Model.Approver.FullName : "n/a")</div>
@@ -47,7 +47,6 @@
         </li>
     </ul>
 
-	<footer class="ui-corner-bottom"></footer>
 </section>
 }
 
