--- a/Purchasing.Web/Views/Workgroup/DeleteWorkgroupVendor.cshtml
+++ b/Purchasing.Web/Views/Workgroup/DeleteWorkgroupVendor.cshtml
@@ -7,7 +7,7 @@
 @section SubNav
 {
 	<ul class="navigation">
-		<li>@Html.ActionLink("Back to List", "VendorList", new {id=Model.Workgroup.Id} )</li>
+		<li>@Html.ActionLink("Back to List", "VendorList", new { id = Model.Workgroup.Id }, new { @class = "button" })</li>
 	</ul>
 }
 
@@ -67,7 +67,6 @@
 		</li>
 	</ul>
 
-	<footer class="ui-corner-bottom"></footer>
 </section>
 }
 
