--- a/Purchasing.Web/Views/Workgroup/Details.cshtml
+++ b/Purchasing.Web/Views/Workgroup/Details.cshtml
@@ -62,9 +62,10 @@
             padding: 1em;
             width: 180px;
             float: left;
-            margin-right: 20px;
+            margin-right: 30px;
             cursor: pointer;            
         }
+        div.workgroup-info:last-child {}
         div.workgroup-info:hover
         {
            -moz-box-shadow:inset 0 0 10px lightblue;
