--- a/Purchasing.Web/Views/Admin/Index.cshtml
+++ b/Purchasing.Web/Views/Admin/Index.cshtml
@@ -12,7 +12,7 @@
     </header>
 
     <div class="section-contents">
-    <div class="col1"></div><div class="col2" style="display:inline-block; width:49%; text-align:right;">@Html.ActionLink("Create Admin", "ModifyAdmin", new {}, new {@class="button"})</div>
+    <div class="col1"></div><div class="col2" style="display:inline-block; width:49%; text-align:right;">@Html.ActionLink("Create Admin", "ModifyAdmin", new { }, new { @class = "button" })<br /></div>
     
         <table class="datatable">
             <thead>
