--- a/Purchasing.Web/Views/Admin/RemoveDepartmental.cshtml
+++ b/Purchasing.Web/Views/Admin/RemoveDepartmental.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Purchasing.Core.Domain.User
 
 @{
-    ViewBag.Title = "RemoveDepartmental";
+    ViewBag.Title = "Remove Departmental Admin";
 }
 
 <h3>Are you sure you want to remove @Model.FullNameAndId from the Departmental Admin role?</h3>
