--- a/Purchasing.Web/Views/Admin/_RemoveUserForm.cshtml
+++ b/Purchasing.Web/Views/Admin/_RemoveUserForm.cshtml
@@ -4,7 +4,7 @@
 	@Html.AntiForgeryToken()
 
 <section class="display-form">
-	<header>User Info</header>
+	<header class="ui-widget-header ui-corner-top">User Info</header>
 
     <div class="section-contents">
     
