--- a/Purchasing.Web/Views/Workgroup/Index.cshtml
+++ b/Purchasing.Web/Views/Workgroup/Index.cshtml
@@ -8,7 +8,7 @@
 @section SubNav
 {
 	<ul class="navigation">
-		<li>@Html.ActionLink("Create New", "CreateWorkgroup","Wizard", new{} ,new {@class="button"})</li>
+		<li>@Html.ActionLink("Create New", "CreateWorkgroup","Wizard", new {@class="button"})</li>
 	</ul>
 }
 
