--- a/Purchasing.Web/Views/AutoApproval/Delete.cshtml
+++ b/Purchasing.Web/Views/AutoApproval/Delete.cshtml
@@ -14,13 +14,13 @@
 	</ul>
 }
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this auto approval?</h3>
 
 @using (Html.BeginForm()) {
 	@Html.AntiForgeryToken()
 
 <section class="display-form ui-corner-all">
-	<header class="ui-corner-top ui-widget-header">AutoApproval</header>
+	<header class="ui-corner-top ui-widget-header">Auto Approval</header>
 	<ul>
 
         @Html.Partial("_AutoApprovalDetails")
@@ -34,7 +34,6 @@
 		</li>
 	</ul>
 
-	<footer class="ui-corner-bottom"></footer>
 </section>
 }
 
