--- a/Purchasing.Web/Views/Search/Index.cshtml
+++ b/Purchasing.Web/Views/Search/Index.cshtml
@@ -3,15 +3,26 @@
 
 }
 
+@section AdditionalScripts
+{
+    <style type="text/css">
+     h2 {margin-bottom: 0px;}
+    #body form {text-align: center;}
+    .searchbox {width: 50%; font-size: 1.75em; padding: 10px 15px; margin-top: -.5em; margin-bottom: 1em;}
+    .ui-button {font-size: 1.75em !important;}
+    </style>
+
+}
+
 @using (Html.BeginForm("Results", "Search", FormMethod.Get))
 {
-    <input type="search" id="query" name="q" placeholder="Enter search term"/>
+    <input type="search" id="query" name="q" placeholder="Enter search term" class="searchbox" />
     <input type="submit" class="button" value="Go!"/>
 }
 
-<br/><hr/>
-<section>
-    <header>Search tips!</header>
+<br />
+<section class="display-form">
+    <header class="ui-corner-all ui-widget-header">Search tips!</header>
     <ul>
         <li>Blah blah blah</li>
         <li>Blah blah blah</li>
